--- a/research.html
+++ b/research.html
@@ -33,7 +33,6 @@
 							<div class="w3-content">
 								<!-- Current projects -->
 								<div class="w3-container w3-padding-32">
-									<h2>Ecology of Animal-Vehicle Collisions</h2>
 									<div class="w3-container w3-padding-32">
 									<div class="grid-container">
 										<div>
@@ -42,6 +41,7 @@
 												<img src="./images/deer2.jpg" class="w3-round" alt="deer2" width="100%" height="auto" style="padding-top:10%">
 												</div>
 											<div>
+												<h2>Ecology of Animal-Vehicle Collisions</h2>
 												<p>Animal-vehicle collisions (AVCs) are ubiquitous across the developed world. AVCs cause billions of animal deaths each year and pose substantial safety threats and economic costs to people. Research on AVCs in the DeVault Lab is focused on learning why AVCs occur by investigating what goes wrong from the animal’s perspective when they are struck by vehicles. DeVault Lab members then apply that knowledge to the development of mitigation measures designed to reduce collisions.</p>
 												<h6 style="letter-spacing:3px">Mallard-vehicle collisions: ambient light and flight initiation distance</h6>
 												<p>Between 1988 and 2010, more than 219 people were killed in aircraft crashes caused by collisions with birds. These collisions also result in costly damage to aircraft, totaling nearly $1 billion/year on average. The mallard (<i>Anas platyrhynchos</i>) alone caused at least 1205 recorded bird strikes with commercial U.S. aircraft in the last 30 years and is ranked as the 7th highest-risk bird species at airports across the U.S. To further understand the ecology of these interactions and identify potential mitigation solutions, Shane Guenin is leading a study using simulated and actual vehicle approaches to examine the effects of ambient light, vehicle distance, vehicle speed, and vehicle lighting on duck perception and escape behaviors.</p>
@@ -52,7 +52,6 @@
 										</div>
 										<hr>
 											<div class="w3-container">
-												<h2>Avian Ecotoxicology</h2>
 												<div class="w3-container w3-padding-16">
 												<div class="grid-container">
 												<div>
@@ -60,7 +59,7 @@
 													<img src="./images/dike.jpg" class="w3-round" alt="dike" width="100%" height="auto" style="margin-top:10%">
 													<img src="./images/mallard2.JPG" class="w3-round" alt="mallard2" width="100%" height="auto" style="margin-top:10%">
 													</div>
-														<div>
+														<div><h2>Avian Ecotoxicology</h2>
 															<p>Ongoing research in our lab uses integrated approaches to examine the interactions between environmental contaminants, such as heavy metals and radioactivity, and birds at the individual, population, and ecosystem scales. Much of the ecotoxicology work we do tends to focus on birds because they are visible, widespread, and reliable indicators of environmental contamination. Outcomes contribute to our understanding of exposure and sensitivity of birds and other wildlife to natural and anthropogenic contaminants with the goal of identifying management and conservation solutions that promote wildlife and human health.</p>
 															<h6 style="letter-spacing:3px">Birds as potential vectors of heavy metals</h6>
 															<p>Constructed wetlands are used to facilitate the sequestration of heavy metals into soil, which can greatly reduce the spread of metal contamination into downstream aquatic environments. The DeVault Lab is currently investigating how potentially toxic metals are transferred from constructed wetlands to terrestrial environments by quantifying heavy metal burdens in tissues of species that utilize constructed wetland habitat. Specifically, we are comparing heavy metal concentrations in avian communities using constructed wetlands to avian communities using wetlands with no history of contamination. With this information, we aim to better understand whether further mitigation efforts are necessary to reduce the spread of heavy metal contamination from constructed wetlands.</p>
@@ -72,11 +71,11 @@
 												</div>
 												<hr>
 													<div class="w3-container">
-														<h2>Scavenging Ecology</h2>
+														
 														<div class="w3-container w3-padding-16">
 														<div class="grid-container">
 															<img src="./images/tuvu3.jpg" class="w3-round" alt="lab" width="100%" height="auto">
-																<div>
+																<div><h2>Scavenging Ecology</h2>
 																	<p>Scavenging is much more than a curiosity of animal behavior; carrion consumption is widespread and common among terrestrial vertebrates and can have substantial impacts on communities and ecosystems. Our work in this area has branched into several lines of inquiry, the most recent of which intersect with our interest in the causes and consequences of AVCs. With our collaborators, we recently investigated the magnitude of animal mortality caused by AVCs, how carcasses produced from automobile strikes influence animal communities through scavenging, and the role vultures play in providing ecosystem services by consuming biomass produced from AVCs.</p>
 																	<p>Much of the scavenging ecology work we do is in collaboration with the <a href="http://beasleywildlifelab.srel.uga.edu/" title="Jim Beasely Lab" target="_blank" class="w3-hover-text-green">Beasley Wildlife Lab</a>.
 																</div>
