--- a/people.html
+++ b/people.html
@@ -92,7 +92,7 @@
 												</div>
 												<!-- End page content -->
 											</div>
-										</body>
+										</div>
 										<!-- Footer -->
 										<footer class="w3-center w3-light-grey w3-padding-32">
 											<p class="w3-small">The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia.</p>
@@ -102,4 +102,5 @@
 												<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
 											</p>
 										</footer>
+										</body>
 									</html>
