--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
 									</div>
 											<!-- Footer -->
 											<footer class="w3-center w3-light-grey w3-padding-32">
+											<div style="width:5%;margin:auto">
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7847587&style=0006&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>
+</div>
 												<p class="w3-small">The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia.</p>
 												<p class="w3-small">
 													<a href="https://github.com/devaultlab/devaultlab.github.io" title="Website theme" target="_blank" class="w3-hover-text-green">Website theme</a>
