--- a/index.html
+++ b/index.html
@@ -58,22 +58,28 @@
 											</div>
 											<hr>
 											<!-- News section -->
-										<div class="w3-container w3-padding-32" id="where">
-											<div class="grid-container">
-												<div>
-													<a class="twitter-timeline" href="https://twitter.com/DevaultLab?ref_src=twsrc%5Etfw">Recent News from DeVault Lab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-												</div>
-												<div>
-													<h1 class="w3-center">Recent News</h1>
-													 <ul class="w3-large">
-													  <li>Coming soon</li>
-													  <li></li>
-													  <li></li>
-													</ul> 
-												</div>
+										<div class="w3-padding-32" style="margin-bottom:10%" id="news">
+										<h1 class="w3-center">Recent News</h1>
+										<div class="row" style="height:100px;margin:auto;margin-top:2%">
+											<div style="width:5%;margin:auto">
+												<img src="./images/fuzz.png" class="w3-round" alt="fuzz" style="max-height:100px;margin-left:30px">
 											</div>
+											<div style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
+												<p style="font-size:large"><i>August 8, 2021&mdash;</i>Our lab’s research is featured in New York Times Bestselling Author Mary Roach’s new book, <i>Fuzz: When Nature Breaks the Law</i>, W.W. Norton & Company, 2021.</p>
+											</div>								
 											</div>
+											
+										<div class="row" style="height:100px;margin-top:2%">
+											<div style="width:5%;margin:auto">
+												<img src="./images/twitter_icon.jpg" class="w3-round" alt="twitter icon" style="max-height:100px;margin:auto">
+											</div>
+											<div style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
+												<p style="font-size:large"><i>July 23, 2021&mdash;</i>Our first tweet! Check us out <a href="https://www.twitter.com/devaultlab">@devaultlab</a>.</p>
+											</div>								
+											</div>
+										</div>
 									</div>
+								</div>
 											<!-- Footer -->
 											<footer class="w3-center w3-light-grey w3-padding-32">
 											<div style="width:5%;margin:auto">
