--- a/people.html
+++ b/people.html
@@ -60,12 +60,6 @@
 											<p style="color: grey">Project Coordinator / mary dot chapman at uga dot edu</p>
 											<p>Mary leads a study looking at heavy metals in birds that utilize a constructed wetland that receives industrial wastewater. She received her B.S. and M.S. in Environmental Science at Taylor University, Indiana. Her master's research looked at species richness of neotropical migrant birds at different forest corridor widths along an Indiana river adjacent to farmland. The goal was to determine how wide farmers would need to keep their corridors to provide habitat for a diverse array of bird species. Mary is interested in avian ecology and enjoys birding and hiking in her free time. She is working on passing her love of birds and nature on to her 5-year-old son.</p>
 										</div>
-										<img src="./images/shayna.jpg" class="w3-round" alt="shayna" width="100%" height="auto" style="margin-top:5%">
-											<div>
-												<h5>Shayna Mu&#241;oz</h5>
-												<p style="color: grey">Research Technician / shayna dot munoz25 at uga dot edu</p>
-												<p> Shayna Muñoz recently received her B.S. in Forest Resources from UGA's Warnell School of Forestry and Natural Resources. She is currently a research technician for the lab's Avian Heavy Metal project. In her free time, she is a fan of hiking, music, and true crime podcasts.</p>
-											</div>
 											<img src="./images/carson.jpg" class="w3-round" alt="carson" width="100%" height="auto" style="margin-top:5%">
 												<div>
 													<h5>Carson Pakula</h5>
@@ -90,6 +84,12 @@
 														</div>
 													</div>
 												</div>
+												<div>
+												<h2>Former lab members</h2>
+												<div>
+												Shayna Mu&#241;oz - <i>Research technician</i>
+												</div>
+												</div>	
 												<!-- End page content -->
 											</div>
 										</div>
