--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 										<!-- Item 5 -->
 										<div class="row" style="height:100px;margin:auto;margin-top:2%">
 											<div style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
-												<p style="font-size:large"><i>October 28, 2021&mdash;</i>Two new positions are open in our lab! See the <a href = "https://journal.afonet.org/"> job board posting </a> and <a href = "https://twitter.com/DevaultLab/status/1450237305826983937"> twitter position announcement</a>.</p>
+												<p style="font-size:large"><i>October 28, 2021&mdash;</i>Two new positions are open in our lab! See the <a href = ""> job board posting (coming soon) </a> and <a href = "https://twitter.com/DevaultLab/status/1450237305826983937"> twitter position announcement</a>.</p>
 											</div>								
 											</div>
 										
