--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 			<div class="row" style="height:100px;margin:auto;margin-top:2%">
 				<div
 					style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
-					<p style="font-size:large"><i>October 28, 2021&mdash;</i>Two new positions are open in our lab! See
-						the <a href="">job board posting (coming soon)</a> and <a
+					<p style="font-size:large"><i>October 28, 2021&mdash;</i><b>Two new positions are open in our lab!</b> See
+						the <a href="https://wfscjobs.tamu.edu/jobs/m-s-avian-ecotoxicology-and-ph-d-animal-vehicle-collisions-university-of-georgia-devault-wildlife-lab/">job board posting</a> and <a
 							href="https://twitter.com/DevaultLab/status/1450237305826983937"> twitter announcement</a>.
 					</p>
 				</div>
@@ -116,9 +116,8 @@
 			<div class="row" style="height:100px;margin:auto;margin-top:2%">
 				<div
 					style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
-					<p style="font-size:large"><i>October 7, 2021&mdash;</i>Recent press about <a
-							href="https://news.uga.edu/vultures-prefer-roosting-near-civilization/">vulture roosting
-							study</a> appears in UGA Today.</p>
+					<p style="font-size:large"><i>October 7, 2021&mdash;</i>A recent study on <a
+							href="https://news.uga.edu/vultures-prefer-roosting-near-civilization/">vulture roosting</a> by Dr. Travis DeVault and others gets press in UGA Today.</p>
 				</div>
 			</div>
 			<!-- Item 2 -->
