--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 		<div class="w3-padding-32" style="margin-bottom:10%" id="news">
 			<h1 class="w3-center">Recent News</h1>
 			<div style="overflow-y: scroll; height:400px">
+						<div class="row" style="height:100px;margin:auto;margin-top:2%">
+				<div
+					style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
+					<p style="font-size:large"><i>December 10, 2021&mdash;</i>We are no longer accepting applications for the graduate student positions announced below. Thanks for your interest!</p>
+				</div>
+			</div>
 			<!-- Item 5 -->
 			<div class="row" style="height:100px;margin:auto;margin-top:2%">
 				<div
