--- a/opportunities.html
+++ b/opportunities.html
@@ -52,7 +52,7 @@
 								<div class="w3-container w3-padding-16">
 								<h3>Current Opportunities</h3>
 									<p>Here, we'll post information about open graduate student and other research positions in the DeVault Lab.</p>
-									<p style="margin-left: 2%;"><b>      Join our lab!</b> Two positions are currently open and accepting applications. For more info and how to apply, <a href="https://twitter.com/DevaultLab/status/1450237305826983937"> see the annoucement on twitter.</a></p>
+									<p style="margin-left: 2%;"><i>There are no open positions at this time.</i></p>
 								</div>
 							</div>
 						</div>
