--- a/collaborators.html
+++ b/collaborators.html
@@ -31,7 +31,7 @@
 						<!-- Page content -->
 						<div class="w3-content" style="padding-top:32px">
 								<div class="w3-container w3-padding-16" style="background-color: #f1f1f1">
-									<p style="font-size:large">Our work is undeniably improved and made more fulfilling through collaboration with other research groups. You can learn more about the research programs of some of our collaborators using the links below.</p>
+									<p style="font-size:large">Our work is undeniably improved and made more fulfilling through collaboration with other groups. You can learn more about the research programs of some of our collaborators using the links below.</p>
 								</div>
 								<div class="w3-container w3-padding-32">
 									<a href="http://beasleywildlifelab.srel.uga.edu/" title="Dr. Jim Beasley" target="_blank" class="w3-hover-text-green">
