--- a/index.html
+++ b/index.html
@@ -94,6 +94,21 @@
 		<div class="w3-padding-32" style="margin-bottom:10%" id="news">
 			<h1 class="w3-center">Recent News</h1>
 			<div style="overflow-y: scroll; height:400px">
+			<!-- Items -->
+				<div class="row" style="height:100px;margin:auto;margin-top:2%">
+				<div
+					style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
+					<p style="font-size:large"><i>March 7, 2022&mdash;</i>Dr. DeVault will be giving a seminar as part of Mississippi State University’s Conservation Lecture Series on Thursday, March 10 titled “Searching for the fundamental causes of animal-vehicle collisions: ecology, behavior, and evolution”.</p>
+				</div>
+			</div>
+			<!-- Item 7 -->
+				<div class="row" style="height:100px;margin:auto;margin-top:2%">
+				<div
+					style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
+					<p style="font-size:large"><i>March 4, 2022&mdash;</i><b>A big congratulations to M.S. student Carson Pakula</b> for winning First Place in his session for his talk at Warnell's Graduate Student Symposium!</p>
+				</div>
+			</div>
+			<!-- Item 6 -->
 						<div class="row" style="height:100px;margin:auto;margin-top:2%">
 				<div
 					style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
