--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<div class="row" style="height:100px;margin:auto;margin-top:2%">
 				<div
 					style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
-					<p style="font-size:large"><i>March 7, 2022&mdash;</i>Dr. DeVault will be giving a seminar as part of Mississippi State University’s Conservation Lecture Series on Thursday, March 10 titled “Searching for the fundamental causes of animal-vehicle collisions: ecology, behavior, and evolution”.</p>
+					<p style="font-size:large"><i>March 7, 2022&mdash;</i>Dr. DeVault will be giving a seminar as part of Mississippi State University’s Conservation Lecture Series on Thursday, March 10 titled <i>Searching for the fundamental causes of animal-vehicle collisions: ecology, behavior, and evolution</i>.</p>
 				</div>
 			</div>
 			<!-- Item 7 -->
