--- a/collaborators.html
+++ b/collaborators.html
@@ -45,7 +45,7 @@
 										<h4>Dr. Ainara Cortes-Avizanda, IMEDEA</h4>
 									</a>
 									<a href="http://www.gdharmarajan.com/" title="Dr. Guha Dharmarajan" target="_blank" class="w3-hover-text-green">
-										<h4>Dr. Guha Dharmarajan, UGA SREL</h4>
+										<h4>Dr. Guha Dharmarajan, Krea University</h4>
 									</a>
 									<a href="http://www.estebanfj.com/" title="Dr. Esteban Fernandez-Juricic" target="_blank" class="w3-hover-text-green">
 										<h4>Dr. Esteban Fernandez-Juricic Lab, Purdue</h4>
