--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<div class="row" style="height:100px;margin:auto;margin-top:2%">
 				<div
 					style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
-					<p style="font-size:large"><i>May 17, 2022&mdash;</i>We are currently recruiting a Ph.D. student to join our group in August 2022. <a href="https://github.com/devaultlab/devaultlab.github.io/docs/PhD student announcement 2022.pdf" title="PhD student annoucement 2022" target="_blank" class="w3-hover-text-green">See the position announcement here.</a></p></p>
+					<p style="font-size:large"><i>May 17, 2022&mdash;</i>We are currently recruiting a Ph.D. student to join our group in as early as Fall 2022. <a href="https://github.com/devaultlab/devaultlab.github.io/docs/PhD student announcement 2022.pdf" title="PhD student annoucement 2022" target="_blank" class="w3-hover-text-green">See the position announcement here.</a></p></p>
 				</div>
 			</div>
 			<!-- Item 8 -->
