--- a/opportunities.html
+++ b/opportunities.html
@@ -52,7 +52,7 @@
 								<div class="w3-container w3-padding-16">
 								<h3>Current Opportunities</h3>
 									<p>Here, we'll post information about open graduate student and other research positions in the DeVault Lab.</p>
-									<p style="margin-left: 2%;"><b>We are currently recruiting a Ph.D. student to join our group as early as Fall 2022. </b><a href="https://github.com/devaultlab/devaultlab.github.io/blob/main/docs/PhD%20student%20announcement%202022.pdf" title="PhD student annoucement 2022" target="_blank" class="w3-hover-text-green">See the position announcement here.</a></p>
+									<p style="margin-left: 2%;"><b>We are currently recruiting a Ph.D. student to join our group as soon as Fall 2022. </b><a href="https://github.com/devaultlab/devaultlab.github.io/blob/main/docs/PhD%20student%20announcement%202022.pdf" title="PhD student annoucement 2022" target="_blank" class="w3-hover-text-green">See the position announcement here.</a></p>
 								</div>
 							</div>
 						</div>
