--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,8 @@
 								</h1>
 							</div>
 						</header>
+																			<div class="w3-display-container w3-content" style = "text-align:right;margin-top:-0.7%;max-width:1600px;min-width:500px"><p class="w3-small">Photo by Eve Turek, Used with Permission</p></div>
+
 						<!-- Page content -->
 						<div class="w3-content" style="padding-top:32px" id="Top">
 							<div class="w3-container w3-padding-16" style="background-color: #f1f1f1">
