--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<p class="w3-wide" style="color:white;opacity:1">at the University of Georgia&mdash;Savannah River Ecology Lab</p>
 		</div>
 	</header>
-	<div class="w3-display-container w3-content" style = "text-align:right;margin-top:-0.7%"><p class="w3-small">Photo by Eve Turek, Used with Permission</p></div>
+	<div class="w3-display-container w3-content" style = "text-align:right;margin-top:-0.7%"><p class="w3-small">Eve Turek, Used with Permission</p></div>
 	<!-- Page content -->
 	<div class="w3-content">
 		<!-- What We Do -->
