--- a/people.html
+++ b/people.html
@@ -28,7 +28,7 @@
 								</h1>
 							</div>
 						</header>
-							<div class="w3-display-container w3-content" style = "text-align:right;margin-top:-0.7%;max-width:1600px;min-width:500px"><p class="w3-small">Photo by Eve Turek, Used with Permission</p></div>
+							<div class="w3-display-container w3-content" style = "text-align:right;margin-top:-2.5%;max-width:1600px;min-width:500px"><p class="w3-small">Eve Turek, Used with Permission&nbsp;&nbsp;&nbsp;</p></div>
 						<!-- Page content -->
 						<div class="w3-content">
 							<!-- People Section -->
