--- a/publications.html
+++ b/publications.html
@@ -19,6 +19,8 @@
 							</div>
 						</div>
 					</div>
+							<div class="w3-display-container w3-content" style = "text-align:right;margin-top:-2.5%;max-width:1600px;min-width:500px"><p class="w3-small">Eve Turek, Used with Permission&nbsp;&nbsp;&nbsp;</p></div>
+
 					<!-- Header -->
 					<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
 						<img class="w3-image" src="./images/home_crop.jpg" alt="home" width="100%">
@@ -28,7 +30,7 @@
 								</h1>
 							</div>
 						</header>
-																			<div class="w3-display-container w3-content" style = "text-align:right;margin-top:-0.7%;max-width:1600px;min-width:500px"><p class="w3-small">Photo by Eve Turek, Used with Permission</p></div>
+							<div class="w3-display-container w3-content" style = "text-align:right;margin-top:-2.5%;max-width:1600px;min-width:500px"><p class="w3-small">Eve Turek, Used with Permission&nbsp;&nbsp;&nbsp;</p></div>
 
 						<!-- Page content -->
 						<div class="w3-content" style="padding-top:32px" id="Top">
