--- a/people.html
+++ b/people.html
@@ -74,6 +74,14 @@
 														<p>Shane received his B.S. in Recreation, Parks, & Leisure Services from Central Michigan University where he studied wild rice genetics and the impacts of hiking trails on small mammal populations. He is currently an M.S. student at Warnell's School of Forestry and Natural Resources. Shane is studying risk assessment in ducks to better understand and help to reduce avian-vehicle collisions. He is interested in cognitive ecology, human-wildlife interactions, and natural resource policy.</p>
 														<p>Shane is co-advised by Dr. James Martin.</p> 
 													</div>
+													
+													<img src="./images/courtney2.png" class="w3-round" alt="courtney" width="100%" height="auto" style="margin-top:5%">
+														<div>
+															<h5>Courtney Werner</h5>
+															<p style="color: grey">M.S. Student / courtney.werner25 at uga dot edu </p>
+															<p>Courtney Werner is an M.S. student at the Savannah River Ecology Laboratory, where she is investigating the presence of radionuclides and heavy metals in avian populations. Her research interests include wildlife health, ecotoxicology, and environmental stewardship. Courtney received her B.S. in Evolutionary Anthropology from Duke University, where she focused on macroecology of infectious diseases in mammals. In her free time, she enjoys rock climbing and playing old-time fiddle.</p>
+														</div>
+													
 													<img src="./images/jon.jpg" class="w3-round" alt="jon" width="100%" height="auto" style="margin-top:5%">
 														<div>
 															<h5>Jon Skaggs, M.S.</h5>
