--- a/people.html
+++ b/people.html
@@ -78,7 +78,7 @@
 													<img src="./images/courtney2.png" class="w3-round" alt="courtney" width="100%" height="auto" style="margin-top:5%">
 														<div>
 															<h5>Courtney Werner, B.S.</h5>
-															<p style="color: grey">M.S. Student / courtney.werner25 at uga dot edu </p>
+															<p style="color: grey">M.S. Student / courtney dot werner25 at uga dot edu </p>
 															<p>Courtney Werner is an M.S. student at the Savannah River Ecology Laboratory, where she is investigating the presence of radionuclides and heavy metals in avian populations. Her research interests include wildlife health, ecotoxicology, and environmental stewardship. Courtney received her B.S. in Evolutionary Anthropology from Duke University, where she focused on macroecology of infectious diseases in mammals. In her free time, she enjoys rock climbing and playing old-time fiddle.</p>
 														</div>
 													
