--- a/index.html
+++ b/index.html
@@ -94,7 +94,20 @@
 		<div class="w3-padding-32" style="margin-bottom:10%" id="news">
 			<h1 class="w3-center">Recent News</h1>
 			<div style="overflow-y: scroll; height:400px">
-			
+			<!-- Item 11 -->
+			<div class="row" style="height:100px;margin:auto;margin-top:2%">
+				<div
+					style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
+					<p style="font-size:large"><i>June 23, 2022&mdash;</i>Congratulations! <a href="https://s3.amazonaws.com/xcdshared/wmsym/WM2022_technicalprogram/Superior%20Paper%20Award%20Winners.pdf" target="_blank" class="w3-hover-text-green">A recent paper by lead author Mary Chapman was commended as a "Superior Paper" at WM2022</a>. Coauthors are G. Dharmarajan, A.L. Bryan Jr., T.L. DeVault, L. Lee, and O.E. Rhodes.</p>
+				</div>
+			</div>
+			<!-- Item 10 -->
+			<div class="row" style="height:100px;margin:auto;margin-top:2%">
+				<div
+					style="width:80%;height:100%;background-color:#f1f1f1;padding-right:16px;padding-left:16px;margin:auto">
+					<p style="font-size:large"><i>June 23, 2022&mdash;</i>We are no longer accepting applications for the graduate student positions announced below. Thanks for your interest!</p>
+				</div>
+			</div>
 			<!-- Item 9 -->
 				<div class="row" style="height:100px;margin:auto;margin-top:2%">
 				<div
